@@ -6,15 +6,23 @@
     },
     "docker": {
         "container": {
-            "id": "6d01caff41f2f9118c0ced423579d70b6161eec614270e3cbf1b72e2bb40f84e",
-            "name": "gifted_hugle"
+            "id": "1bab78b8101e4d4df7de3dd9747512641bd0e97f886ca44be2f3f22a7b90ea2b",
+            "labels": {
+                "com_docker_compose_config-hash": "1b78c28e8f14c2d7804c5b002c0f1dd29afac4a82737d38d079d227029013732",
+                "com_docker_compose_container-number": "1",
+                "com_docker_compose_oneoff": "False",
+                "com_docker_compose_project": "metricbeatdocker",
+                "com_docker_compose_service": "elasticsearch",
+                "com_docker_compose_version": "1.11.1"
+            },
+            "name": "elasticsearch"
         },
         "healthcheck": {
             "event": {
-                "end_date": "2017-01-25T10:58:51.171Z",
+                "end_date": "2017-03-02T05:19:07.701Z",
                 "exit_code": 0,
-                "output": "",
-                "start_date": "2017-01-25T10:58:51.114Z"
+                "output": "{\n  \"name\" : \"iElnwHE\",\n  \"cluster_name\" : \"elasticsearch\",\n  \"cluster_uuid\" : \"phQC_WOFRBK10LUqTQS5lA\",\n  \"version\" : {\n    \"number\" : \"6.0.0-alpha1\",\n    \"build_hash\" : \"d02170b\",\n    \"build_date\" : \"2017-02-06T12:00:50.817Z\",\n    \"build_snapshot\" : true,\n    \"lucene_version\" : \"6.4.1\"\n  },\n  \"tagline\" : \"You Know, for Search\"\n}\n",
+                "start_date": "2017-03-02T05:19:07.646Z"
             },
             "failingstreak": 0,
             "status": "healthy"
