@@ -55,6 +55,7 @@ https://github.com/elastic/beats/compare/v5.1.1...master[Check the HEAD diff]
 - Fix bug docker module hanging when docker container killed. {issue}3610[3610]
 - Set timeout to period instead of 1s by default as documented.
 - Add error handling to system process metricset for when Linux cgroups are missing from the kernel. {pull}3692[3692]
+- Add labels to the Docker healthcheck metricset output. {pull}3707[3707]
 
 *Packetbeat*
 
